# stellar_modulation_of_cosmic_rays

./: .gitignore  CITATION.cff  Fullcode.py  LICENSE  README.md  pyproject.toml  requirements.txt  stellar_parameters.py
.github/workflows/: tests.yml
data/reference/: Mamajek_spectral_table.csv
docs/: consolidation_plan.md  reproducibility.md  scripts.md  third_party_data.md
scripts/: Bubble_model.py  Modulation_data_ploting.py  Simulation_code.py  Simulation_results_reader.py
stellar_bubble_characterisation/: README.md  function_definitions.py  hz_calculations.py  plotting.py
stellar_bubbles/: __init__.py  habitable_zone.py  simulation_data.py
tests/: test_habitable_zone.py  test_repository_contract.py  test_simulation_data.py
